--- a/Final_project/final_project.css
+++ b/Final_project/final_project.css
@@ -74,6 +74,7 @@ body {
     font-family: code;
     margin-bottom: 15px;
     height: 932px;
+    outline: none;
 }
 
 .thirdblock {
@@ -97,6 +98,7 @@ body {
     margin-top: 40px;
     border: 2px solid white;
     border-radius: 1000px;
+    outline: none;
 }
 
 
@@ -116,6 +118,7 @@ body {
     font-size: 20px;
     color: white;
     cursor: pointer;
+    outline: none;
 }
 
 .btn {
@@ -125,6 +128,7 @@ body {
     background-color: rgba(26,27,35,0.7);
     color: white;
     cursor: pointer;
+    outline: none;
     
 }
 
@@ -136,6 +140,7 @@ body {
     background-color: rgba(26,27,35,0.7);
     color: white;
     cursor: pointer;
+    outline: none;
     
 }
 
